# AgentBrowser

./: .gitignore  .z-ai-config  AGENT-PROTOCOL.md  CLAUDE.md  Dockerfile  ENFORCE-FIX-PROTOCOL.md  INTEGRATION_CONFIG.md  README.md  ab 2  ab 3  ab 4  docker-compose.yml  eslint.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts  server.ps1  start-all.ps1  tsconfig.json  verify-audit-fixes.ps1  vitest.config.ts  vitest.setup.ts  worklog.md
Big-Homie-main/: .gitignore  AUTONOMOUS_GUIDE.md  Big Homie  COMPETITIVE_FEATURES.md  Dockerfile  E2E_TEST_RESULTS.md  FEATURES_UX.md  HEARTBEAT.md  INTEGRATION_GUIDE.md  MCP_SERVER_SETUP.md  MEDIA_GENERATION.md  MULTIMODAL_FEATURES.md  README.md  README_APP.md  SOUL.md  VERTICALS_INSTALL.md  abilities_registry.py  agent_profiles.py  alpha_engine_server.py  autonomous_loop.py  big_homie.spec  big_homie_biotech_bridge.py  big_homie_web.py  browser_skill.py  build.bat  build.sh  cognitive_core.py  config.py  content_factory.py  content_utils.py  context_manager.py  correction_ledger.py  cost_guards.py  crew_builder.py  cron_manager_widget.py  database_ops.py  document_intelligence.py  dream_system.py  env.additions.txt  environment_sensing.py  (+52 more)
Big-Homie-main/big_homie/: __init__.py  governance.py  llm_gateway.py  thoughts_logger.py  vector_memory.py
Big-Homie-main/big_homie/integrations/: __init__.py  binance_integration.py  cloudflare_integration.py  coinbase_commerce_integration.py  draftkings_integration.py  google_cloud_integration.py  perplexity_integration.py  plaid_integration.py  prizepicks_integration.py  shopify_integration.py  stripe_integration.py  twilio_integration.py  vercel_integration.py
Big-Homie-main/docs/: DEEP_INTEGRATIONS.md
Big-Homie-main/integrations/: __init__.py  base_l2_integration.py  binance_integration.py  cloudflare_integration.py  coinbase_commerce_integration.py  draftkings_integration.py  google_cloud_integration.py  perplexity_integration.py  plaid_integration.py  prizepicks_integration.py  shopify_integration.py  stripe_integration.py  twilio_integration.py  vercel_integration.py
Claw-Protect-main/: .env.example  ARCHITECTURE.md  Dockerfile  ENTERPRISE_IMPLEMENTATION.md  GLOSSARY.md  IMPLEMENTATION.md  PROBLEMS.md  QUICKSTART.md  README.md  SECURITY.md  SECURITY_CHECKLIST.md  UI_IMPLEMENTATION.md  deploy.sh  docker-compose.yml  firebase-blueprint.json  (+12 more)
(+279 files in other folders)
