[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "big-homie"
version = "1.0.0"
description = "Big-Homie Agent Core — LLM gateway, memory, governance, and integrations"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "httpx>=0.25.0",
    "pydantic>=2.4.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "anthropic>=0.25.0",
    "openai>=1.12.0",
    "requests>=2.31.0",
    "loguru>=0.7.0",
    "sqlalchemy>=2.0.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "tiktoken>=0.5.0",
    "rich>=13.0.0",
    "watchdog>=3.0.0",
    "prometheus-client>=0.19.0",
]

[project.optional-dependencies]
gui = [
    "PyQt6>=6.6.0",
    "PyQt6-WebEngine>=6.6.0",
]
vector = [
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "sqlite-vec>=0.0.1",
]
chat = [
    "discord.py>=2.3.0",
    "slack-sdk>=3.23.0",
]
db = [
    "psycopg2-binary>=2.9.0",
    "supabase>=2.0.0",
]
pdf = [
    "pdfplumber>=0.10.0",
    "PyPDF2>=3.0.0",
    "pytesseract>=0.3.10",
    "pillow>=10.1.0",
]
cloud = [
    "cloudflare>=2.11.0",
    "stripe>=5.5.0",
    "web3>=6.0.0",
    "google-cloud-storage>=2.10.0",
    "google-cloud-bigquery>=3.11.0",
]
tools = [
    "playwright>=1.40.0",
]
build = [
    "pyinstaller>=6.3.0",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4.0",
]
all = [
    "big-homie[gui,vector,chat,db,pdf,cloud,tools,build,dev]",
]

[tool.setuptools.packages.find]
include = ["big_homie*"]

[tool.ruff.lint]
ignore = [
    "E402",
    "E722",
    "E701",
    "E741",
    "F401",
    "F403",
    "F841",
]

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
testpaths = ["."]
pythonpath = ["."]
python_files = ["test_*.py"]
filterwarnings = [
    "ignore::DeprecationWarning",
]
markers = [
    "core: Core system tests (config, memory)",
    "llm: LLM gateway, routing, cost guards",
    "governance: Governance and security systems",
    "skills: Skills and capabilities (browser, MCP, shell, media)",
    "autonomous: Autonomous systems (heartbeat, sub-agents)",
    "intelligence: Intelligence and learning systems",
    "support: Support systems (context, abilities, logging)",
]
